--- a/arch/arm64/configs/exynos8895-greatlte_defconfig
+++ b/arch/arm64/configs/exynos8895-greatlte_defconfig
@@ -123,6 +123,7 @@ CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
+CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_MEMCG is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
@@ -137,6 +138,7 @@ CONFIG_UTS_NS=y
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
+CONFIG_SCHED_TUNE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
@@ -286,8 +288,15 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-# CONFIG_IOSCHED_DEADLINE is not set
+CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_MAPLE=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_TRIPNDROID=y
+# CONFIG_BFQ_GROUP_IOSCHED is not set
+# CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
@@ -404,22 +413,16 @@ CONFIG_HMP_FREQUENCY_INVARIANT_SCALE=y
 CONFIG_SCHED_HMP_TASK_BASED_SOFTLANDING=y
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
-CONFIG_TIMA=y
+# CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
-CONFIG_RKP=y
-# CONFIG_RKP_DEBUG is not set
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
-CONFIG_RKP_6G=y
+# CONFIG_RKP is not set
 CONFIG_RELOCATABLE_KERNEL=y
 
 #
 # Control Flow Protection
 #
-CONFIG_RKP_CFP=y
-CONFIG_RKP_CFP_JOPP=y
-CONFIG_RKP_CFP_JOPP_MAGIC=0x00be7bad
+# CONFIG_RKP_CFP is not set
+# CONFIG_RKP_CFP_JOPP is not set
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
@@ -575,6 +578,8 @@ CONFIG_ARM64_EXYNOS_CPUIDLE=y
 # CPU Frequency scaling
 #
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_GOV_ATTR_SET=y
+CONFIG_CPU_FREQ_GOV_COMMON=y
 # CONFIG_CPU_FREQ_SCHEDUTIL_PERFSTAT_TRIGGER is not set
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
@@ -1025,7 +1030,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_HSR is not set
 # CONFIG_NET_SWITCHDEV is not set
 # CONFIG_NET_L3_MASTER_DEV is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -1226,7 +1231,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_HP_ILO is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1780 is not set
@@ -1242,7 +1247,6 @@ CONFIG_KNOX_KAP=y
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
 CONFIG_EXYNOS_IMA=y
-CONFIG_TIMA_LOG=y
 # CONFIG_FAN_G761 is not set
 # CONFIG_C2PORT is not set
 
@@ -2850,7 +2854,7 @@ CONFIG_CAMERA_GREAT=y
 CONFIG_OIS_USE_RUMBA_S6=y
 CONFIG_COMPANION_FACTORY_VALIDATION=y
 CONFIG_SECURE_CAMERA_USE=y
-CONFIG_USE_SIGNED_BINARY=y
+# CONFIG_USE_SIGNED_BINARY is not set
 CONFIG_MEDIA_EXYNOS=y
 # CONFIG_SOC_CAMERA is not set
 # CONFIG_VIDEO_SAMSUNG_EXYNOS4_IS is not set
@@ -3646,6 +3650,7 @@ CONFIG_USB_GADGET_VBUS_DRAW=2
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
+CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 CONFIG_USB_DUN_SUPPORT=y
 # CONFIG_USB_RNDIS_MULTIPACKET_WITH_TIMER is not set
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
@@ -4149,7 +4154,7 @@ CONFIG_SEC_STI=y
 #
 # Samsung ABC Options
 #
-CONFIG_SEC_ABC=y
+# CONFIG_SEC_ABC is not set
 
 #
 # Samsung ABC Hub Options
@@ -4262,7 +4267,7 @@ CONFIG_ACPM_DVFS=y
 # CONFIG_VDD_AUTO_CAL is not set
 CONFIG_USI=y
 CONFIG_EXYNOS_SECURE_LOG=y
-CONFIG_EXYNOS_KERNEL_PROTECTION=y
+# CONFIG_EXYNOS_KERNEL_PROTECTION is not set
 CONFIG_EXYNOS_SDM=y
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_EXYNOS_ACPM=y
@@ -4849,8 +4854,16 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_GFS2_FS is not set
 # CONFIG_OCFS2_FS is not set
 # CONFIG_BTRFS_FS is not set
-# CONFIG_NILFS2_FS is not set
+ # CONFIG_NILFS2_FS is not set
 # CONFIG_F2FS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+# CONFIG_F2FS_FS_SECURITY is not set
+# CONFIG_F2FS_CHECK_FS is not set
+CONFIG_F2FS_FS_ENCRYPTION=y
+# CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
@@ -4908,7 +4921,9 @@ CONFIG_SDFAT_DEBUG=y
 CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
 CONFIG_SDFAT_STATISTICS=y
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
@@ -5203,10 +5218,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 #
 # Samsung Rooting Restriction Feature
 #
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
+# CONFIG_SEC_RESTRICT_ROOTING is not set
 
 #
 # Security options
@@ -5228,6 +5240,8 @@ CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
+# CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE is not set
+CONFIG_SECURITY_SELINUX_NEVER_ENFORCE=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
@@ -5475,3 +5489,18 @@ CONFIG_ARCH_HAS_ATOMIC64_DEC_IF_POSITIVE=y
 CONFIG_LIBFDT=y
 # CONFIG_SG_SPLIT is not set
 CONFIG_ARCH_HAS_SG_CHAIN=y
+#PappExtras
+CONFIG_LCD_NOTIFY=y
+CONFIG_STATE_NOTIFIER=y
+CONFIG_Z3FOLD=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_CULTIVATION=y
+CONFIG_ASYNC_FSYNC=y
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_CPU_BOOST=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
